objects/Pipeline_Management_Portfolio__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description1__c</fullName>
        <label>Description1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>High_Threshold__c</fullName>
        <label>High Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LabelName__c</fullName>
        <label>LabelName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Threshold__c</fullName>
        <label>Low Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium_Threshold__c</fullName>
        <label>Medium Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pipeline Management Portfolio</label>
</CustomObject>